# agentic-frameworks

./: ReadMe.md
autogen/: .env  ReadMe.md  autogen_intro.ipynb  autogen_intro.py  autogen_message_delegate.ipynb  autogen_message_delegate.py  autogen_multiagent_collaboration.ipynb  autogen_multiagent_collaboration.py  autogen_tools.ipynb  autogen_tools.py
crewai/crewai_intro/: agents.py  main-crew.py
crewai/crewai_jokester/: pyproject.toml  report.md
crewai/crewai_jokester/src/crewai_jokestar/: crew.py  main.py
crewai/crewai_jokester/src/crewai_jokestar/config/: agents.yaml  tasks.yaml
crewai/crewai_stock_analyzer/: README.md  pyproject.toml
crewai/crewai_stock_analyzer/memory/: chroma.sqlite3  long_term_memory_storage.db
crewai/crewai_stock_analyzer/output/: decision.md  research_report.json  trending_companies.json
crewai/crewai_stock_analyzer/src/crewai_stock_analyzer/: crew.py  main.py
crewai/crewai_stock_analyzer/src/crewai_stock_analyzer/config/: tasks.yaml
crewai/crewai_stock_analyzer/src/crewai_stock_analyzer/tools/: custom_tool.py
crewai/crewai_tools_context/: README.md  pyproject.toml  report.md
crewai/crewai_tools_context/src/crewai_tools_context/: crew.py  main.py
crewai/crewai_tools_context/src/crewai_tools_context/config/: agents.yaml  tasks.yaml
langgraph/: .env  ReadMe.md  langgraph_checkpointer_interactivechat.ipynb  langgraph_checkpointer_interactivechat.py  langgraph_intro.ipynb  langgraph_intro.py  langgraph_tools.ipynb  langgraph_tools.py  memory.db  memory.db-shm  memory.db-wal
openai-agents-sdk/: .env  ReadMe.md  multi_agent_tools.ipynb  multi_agent_tools.py  single_agent.ipynb  single_agent.py  single_agent_stucturedoutput_gaurdrails.ipynb  single_agent_stucturedoutput_gaurdrails.py  single_agent_tools.ipynb  single_agent_tools.py
