[project]
name = "crewai_jokestar"
version = "0.1.0"
description = "crewai_jokestar using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
crewai_jokestar = "crewai_jokestar.main:run"
run_crew = "crewai_jokestar.main:run"
train = "crewai_jokestar.main:train"
replay = "crewai_jokestar.main:replay"
test = "crewai_jokestar.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
