[project]
name = "crewai_stock_analyzer"
version = "0.1.0"
description = "crewai_stock_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
crewai_stock_analyzer = "crewai_stock_analyzer.main:run"
run_crew = "crewai_stock_analyzer.main:run"
train = "crewai_stock_analyzer.main:train"
replay = "crewai_stock_analyzer.main:replay"
test = "crewai_stock_analyzer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
