[project]
name = "crewai_tools_context"
version = "0.1.0"
description = "crewai_tools_context using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
crewai_tools_context = "crewai_tools_context.main:run"
run_crew = "crewai_tools_context.main:run"
train = "crewai_tools_context.main:train"
replay = "crewai_tools_context.main:replay"
test = "crewai_tools_context.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
